# wake_focus

./: .gitattributes  .gitignore  README.md  app_webcam.py  object_detect copy.ipynb  pyproject.toml  requirements-arm64.txt  requirements.txt  sleep.txt  sleep2.py
apps/linux/: build_local_launcher_deb.sh  install_local_desktop_entry.sh  run_wake_focus.sh  wake-focus.desktop
config/: default_config.yaml  edge_config.yaml
docs/: wake-focus-acceptance-checklist.md  wake-focus-gap-analysis.md  wake-focus-research-brief.md  yolo26-handheld-classes.md
packaging/: build_arm64_deb.sh  build_deb.sh
packaging/debian/: changelog  control  rules
packaging/windows/: build_exe.bat  wake_focus.spec
prompts/: cloud-opus-wake-focus.md
src/wake_focus/: __init__.py  __main__.py  app.py  config.py  constants.py
src/wake_focus/core/: __init__.py  alert_state_machine.py  async_perception.py  audio_manager.py  camera_manager.py  perception_engine.py
src/wake_focus/fleet/: __init__.py  fleet_monitor.py  gps_manager.py  incident_manager.py  mqtt_client.py  route_manager.py  telemetry_schema.py
src/wake_focus/ml/: __init__.py  drowsiness_detector.py  face_mesh.py  gaze_analyzer.py  (+2 more)
tests/: conftest.py  test_alert_state_machine.py  test_async_perception.py  test_config.py  test_drowsiness_detector.py  test_gps_manager.py  test_map_panel.py  test_object_detector.py  test_perception_engine.py  test_stats_tracker.py  test_telemetry_schema.py
training/: README.md  class_list.txt  dataset.yaml  evaluate.py  export_onnx.py  train.py
yolov8_hand_objects15/: args.yaml  results.csv
(+14 files in other folders)
